2010-10-13  Sancho Lerena <slerena@artica.es>

    * Core.pm: Force XML::Simple to use XML::Parser instead SAX to manage XML
    due a bug processing some XML with blank spaces.

    * DataServer.pm: Checking for BADXML is 2 times with 2 secs of delay now. 
    Aditional check before deleting / procesing XML.

2010-09-08  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/SNMPServer.pm
	lib/PandoraFMS/Core.pm: SNMP Trap console doesnt send trap value to
	alert function. Now does :-). Ported from Trunk version.


2010-08-18  Sancho Lerena <slerena@artica.es>

        * lib/PandoraFMS/Core.pm: Alerts now uses _timestamp_ macro with the
        timestamp of the data (if provided), not the present time. Thanks
        to Daniel Vasconcelos for his patch (SF Tracker id #3044326).

	* *.spec. Updated specs, I forgot to commit some changes.

2010-07-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Merged from trunk.

2010-07-02  Sancho Lerena <slerena@artica.es>

	* util/pandora_logrotate: Removed logrotate info from agent and
	console, should not be here.

	* RHEL: Added directory with patches for RPMBuild in Redhat.
	
	* pandora_server.redhat.spec: Patches applied from the contribution	
	from KIKUCHI Koichiro, thanks Kikuchi!

2010-06-30  Sancho lerena <slerena@artica.es>

	* pandora_server.redhat.spec: Specific Spec for redhat linux.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf: Set the default server_threshold to 5
	  seconds.

2010-06-09  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/make_deb_package.sh: added the code to include the man pages into
	DEB package.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf: Set the default server_threshold to 5
	  seconds.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.spec: Create the man dir.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.spec,
	  pandora_server_installer: Copy man files.
