@@ -1,3 +1,8 @@
+2010-10-21  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/DataServer.pm: Update module configuration from XML
+	  data files. Merged from trunk.
+
 2010-10-13  Sancho Lerena <slerena@artica.es>
 
     * Core.pm: Force XML::Simple to use XML::Parser instead SAX to manage XML
